--- a/yet-another-attempt/package.json
+++ b/yet-another-attempt/package.json
@@ -16,6 +16,7 @@
     "react-timer-hook": "^3.0.5",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.4",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
